 NEWS/ChangeLog for iPlots package
===================================

1.1-1	(under devvelopment)
     o	allow the use of iplots within the R GUI on Mac OS X, but show a
	warning on possible event loop deadlocks.

1.1-0	2007-08-22
     o	use S4 classes for ivar and iset

     o	add subseting and subassignment operator support to ivar and
	to allow users to treat them very much like data frames and
	vectors repectively

     o	move to rJava 0.5 registration facilities

     o	add batch mode support to selection API

1.0-8   2007-06-3
     o  changes in ibase package

1.0-7	2007-04-18
     o	add support for imap

1.0-6	2007-03-02
     o	fix issues with compiling Common with certain compilers

1.0-5	2006-10-11
     o	ivar.new now compares the contents with existing variables and
	will return original reference if the variable already exists

     o	imosaic and ipcp support variable-length arguments

     o	imosaic accepts additional "type" parameter to specify the
	desired mosaic plot variation

     o	iset, iplot and iopt handling ahs been streamlined and better
	documented. It is now possible to obtain individual objects
	for iset, ivar, iplot and iobj.

     o	each plot type has a distinct subclass of "iplot" and thus can
	be identified as such

1.0-4	2006-08-29
     o	several variations of mosaic plots exhibited incorrect
	behavior with respect to empty cells, this has been now fixed

1.0-3	2006-08-20
     o	first CRAN release
...

0.1-0	2003/03/23
     o	first release

